manifest/canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-canary
  namespace: default
  labels:
    app: demoapp
    version: canary
spec:
  selector:
    matchLabels:
      app: demoapp
      version: canary
  replicas: 2
  template:
    metadata:
      labels:
        app: demoapp
        version: canary
    spec:
      containers:
      - name: demoapp
        image: '787278094283.dkr.ecr.us-east-2.amazonaws.com/ca-node-demo:${scmInfo.sha1}'
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 3000
          name: demoapp-port
