manifest/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
  namespace: demo-service
  labels:
    app: demoapp
    env: dev
spec:
  selector:
    matchLabels:
      app: demoapp
      env: dev
  replicas: 2
  template:
    metadata:
      labels:
        app: demoapp
        env: dev
    spec:
      containers:
      - name: demoapp
        image: 787278094283.dkr.ecr.us-east-2.amazonaws.com/ca-node-demo
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 3000
          name: demoapp-port
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp
  namespace: demo-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  ports:
    - port: 80
      targetPort: demoapp-port
      protocol: TCP
  selector:
    app: demoapp
  type: LoadBalancer
