manifest/istio-services.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: grafana-service
#   labels:
#     run: grafana-service
#   namespace: istio-system
# spec:
#   type: NodePort
#   ports:
#   - port: 3000
#     targetPort: 3000
#     protocol: TCP
#     nodePort: 31110
#     name: http
#   selector:
#     app: grafana
# ---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    run: prometheus-service
  namespace: istio-system
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: prometheus
