manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-demo-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  ports:
    - port: 80
      targetPort: node-demo-port
      protocol: TCP
  selector:
    app: node-demo
  type: LoadBalancer
