manifest/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-service-gateway
  namespace: demo-service
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-service
  namespace: demo-service
spec:
  hosts:
  - "*"
  gateways:
  - demo-service-gateway
  http:
  - match:
    - uri:
        exact: /product
    route:
    - destination:
        host: demoapp.demo-service.svc.cluster.local
