manifest/AuthorizationPolicies.yml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "demoapp"
spec:
  selector:
    matchLabels:
      app: demoapp
  rules:
  - to:
    - operation:
        methods: ["GET"]
